Add sorting for transactions
