# lib/handlers/getTransactions.js
@@ -19,7 +19,9 @@ exports.handler = function getTransactions(req, res, next) {
         }
         const account = req.query.accounts.split(',');
         const { perPage, page } = req.query;
-        return book.getTransactions({ account, perPage, page });
+        const newestFirst = req.query.newestFirst || false;
+      
+        return book.getTransactions({ account, perPage, page, newestFirst });
     }).then(txs => {
         const result = txs.map(t => t.values());
         res.json(result);
